## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = fourthlab

fourthlab_SOURCES = \
	main.cc

fourthlab_LDFLAGS = 

fourthlab_LDADD = 


if NATIVE_WIN32
fourthlab_LDFLAGS += -mwindows
endif
