## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = sixthlab

sixthlab_SOURCES = \
	main.cc

sixthlab_LDFLAGS = 

sixthlab_LDADD = 


if NATIVE_WIN32
sixthlab_LDFLAGS += -mwindows
endif
